# moon_profile

./: .gitignore  AGENTS.md  README.md
docs/: prd.md
moon_profile_decky/: .env.example  README.md  deploy.sh  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js
moon_profile_decky/defaults/: profiles.json
moon_profile_decky/docs/: prd.md
moon_profile_decky/py_modules/: moonprofile_core.py
moon_profile_decky/runner/: runner.py
moon_profile_decky/src/: ApolloConfigSection.tsx  GamesGridSection.tsx  LogsSection.tsx  ProfileEditor.tsx  ProfileList.tsx  QuickAccessContent.tsx  RunnerConfigSection.tsx  SettingsPage.tsx  TitleView.tsx  api.ts  env.ts  gameArtwork.ts  gameCollection.ts  gameShortcuts.ts  gameSync.ts  index.tsx  stream.ts  types.d.ts  types.ts
moon_profile_decky/tests/: conftest.py  gameCollection.test.ts  gameShortcuts.test.ts  gameSync.test.ts  setup.ts  test_list_host_displays.py  test_main_plugin.py  test_moonprofile_core.py  test_power.py  test_runner_script.py  test_stop_stream.py
moon_profile_runner/: install.sh  package-lock.json  package.json
moon_profile_runner/packaging/: PKGBUILD  moon-profile-runner-git.install  moon-profile-runner.desktop  moon-profile-runner.service
moon_profile_runner/src/: index.html  main.js  styles.css
moon_profile_runner/src-tauri/: Cargo.toml  tauri.conf.json
moon_profile_runner/src-tauri/src/: apollo.rs  autostart.rs  clients.rs  displays.rs  games.rs  lib.rs  main.rs  ping.rs  power.rs  server.rs  session.rs
moon_profile_runner/src-tauri/src/tests/: apollo.rs  autostart.rs  clients.rs  displays.rs  games.rs  ping.rs  power.rs  server.rs  session.rs  support.rs
moonprofile/: deploy.sh  main.py  package.json  plugin.json
moonprofile/defaults/: profiles.json
moonprofile/runner/: runner.py
moonprofile/src/: ApolloConfigSection.tsx  ButtonPositionSection.tsx  GameActionButton.tsx  ProfileList.tsx  QuickAccessContent.tsx  SettingsPage.tsx  routes.ts  steamShortcut.ts
moonprofile/src/patches/: LibraryAppPatch.tsx
poc/: fase0.sh
src/: TitleView.tsx  api.ts  index.tsx
