[package]
name = "moon_profile_runner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moon_profile_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Servidor HTTP embutido (fala com o plugin Decky) - tokio proprio numa
# thread separada, decoupled do event loop do Tauri (ver setup() em lib.rs).
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
# Leitura de processos do host - mesmo padrao de matching "AppId=<id>" no
# cmdline que main.py:_build_prep_cmd ja usa no pkill do undo.
sysinfo = "0.32"

[dev-dependencies]
# So' pro ServiceExt::oneshot nos testes (bate direto no Router, sem
# precisar abrir uma porta TCP de verdade).
tower = { version = "0.5", features = ["util"] }

