[package]
name = "moon_profile_runner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moon_profile_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Notificacao de desktop (KDE/freedesktop) quando o Deck sincroniza jogos.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Servidor HTTP embutido (fala com o plugin Decky) - tokio proprio numa
# thread separada, decoupled do event loop do Tauri (ver setup() em lib.rs).
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
# Leitura de processos do host - mesmo padrao de matching "AppId=<id>" no
# cmdline que main.py:_build_prep_cmd ja usa no pkill do undo.
sysinfo = "0.32"
# Parsing do libraryfolders.vdf/appmanifest_*.acf (formato texto VDF/
# KeyValues da Valve) pra enumerar os jogos Steam instalados no host.
keyvalues-serde = "0.2"
# appmanifest_*.acf nao tem campo de categoria (jogo vs software/ferramenta)
# - so' a API publica da propria Steam (appdetails) diz o "type" de
# verdade. Tambem usado (feature "cookies") pro fechamento autonomo de
# sessao falar com o Apollo (cookie de sessao "auth", ver src/apollo.rs).
reqwest = { version = "0.12", features = ["json", "cookies"] }
# So' pro timestamp nos logs de diagnostico (session.rs/server.rs) - "clock"
# e' a unica feature necessaria (hora local), sem parsing/timezone extra.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
# So' pro ServiceExt::oneshot nos testes (bate direto no Router, sem
# precisar abrir uma porta TCP de verdade).
tower = { version = "0.5", features = ["util"] }
# Pastas temporarias pros testes de games.rs (fixture de instalacao Steam fake).
tempfile = "3"
# Mocka a API da Steam nos testes - sem isso os testes dependeriam de rede
# de verdade (lento, instavel, sujeito a rate limit).
wiremock = "0.6"

