[package]
name = "moon_profile_runner"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moon_profile_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Desktop notification (KDE/freedesktop) when the Deck syncs games.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embedded HTTP server (talks to the Decky plugin) - its own tokio on a
# separate thread, decoupled from Tauri's event loop (see setup() in lib.rs).
axum = "0.7"
# "process": to run the screen-restore commands (kscreen-doctor) directly
# from the autonomous close-session watchdog (see session.rs).
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "process"] }
# Reads host processes - same "AppId=<id>" cmdline matching pattern that
# main.py:_build_prep_cmd already uses in the undo's pkill.
sysinfo = "0.32"
# Parses libraryfolders.vdf/appmanifest_*.acf (Valve's text VDF/KeyValues
# format) to enumerate the Steam games installed on the host.
keyvalues-serde = "0.2"
# appmanifest_*.acf has no category field (game vs software/tool) - only
# Steam's own public API (appdetails) has the real "type". Also used
# (the "cookies" feature) for the autonomous session-close talking to
# Apollo (session cookie "auth", see src/apollo.rs).
reqwest = { version = "0.12", features = ["json", "cookies"] }
# Only for the timestamp in diagnostic logs (session.rs/server.rs) -
# "clock" is the only feature needed (local time), no extra
# parsing/timezone support.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Parses shortcuts.vdf (Valve's binary VDF format, used for non-Steam
# games added to the host's Steam library) - handles both the text and
# binary VDF variants, so it could in principle replace keyvalues-serde
# too, but that's not worth the churn for now.
steam-vdf-parser = "0.1"

[dev-dependencies]
# Only for ServiceExt::oneshot in the tests (hits the Router directly,
# no need to open a real TCP port).
tower = { version = "0.5", features = ["util"] }
# Temp folders for games.rs's tests (fake Steam install fixture).
tempfile = "3"
# Mocks the Steam API in tests - without this, tests would depend on a
# real network (slow, unstable, subject to rate limiting).
wiremock = "0.6"

